--- a/index.html
+++ b/index.html
@@ -1,7 +1,22 @@
 <!DOCTYPE html>
 <html>
-  <head></head>
+  <head>
+    <title>Demo1</title>
+    <link rel="stylesheet" href="./style.css">
+  </head>
   <body>
-    Hello World
+    <h1>Hello World</h1>
+    <h2>Hello World</h2>
+    <h2 id="second_h2">Hello World</h2>
+    <h3 class="group1">Hello World 1</h3>
+    <h3 class="group1">Hello World 2</h3>
+    <h3 class="group2">Hello World 3</h3>
+    <h4>Hello World</h4>
+    <h5>Hello World</h5>
+    <h6>Hello World</h6>
+
+    <button>Submit</button>
+    <input type="text" placeholder="Input your username">
+    <span>Tag: 0.01</span>
   </body>
 </html>
