--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Demo1</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./style_index.css">
   </head>
   <body>
     <h1>Hello World</h1>
@@ -17,6 +17,7 @@
 
     <button>Submit</button>
     <input type="text" placeholder="Input your username">
-    <span>Tag: 0.01</span>
+    <span>Tag: 0.01</span><br>
+    <a href="/hyperlinks.html">MY SPACE</a>
   </body>
 </html>
