--- a/hyperlinks.html
+++ b/hyperlinks.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style_hyperlink.css" />
-    <link rel="shortcut icon" href="11.ico" type="image/x-icon" />
+    
     <title>Hyperlinks Demo</title>
   </head>
 
@@ -14,7 +14,9 @@
       <div class="logo">MY SPACE</div>
       <nav>
         <a href="/index.html"><span class="mySpan"> Home </span></a>
-        <a href="/linkpage/aboutMe.html"><span class="mySpan">About Me</span></a>
+        <a href="/linkpage/aboutMe.html"
+          ><span class="mySpan">About Me</span></a
+        >
         <a href=""><span class="mySpan">HTML</span></a>
         <a href=""><span class="mySpan">CSS</span></a>
         <a href=""><span class="mySpan"> JS</span></a>
