--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
   <head>
     <title>Demo1</title>
-    <link rel="stylesheet" href="./style_index.css">
+    <link rel="stylesheet" href="./style_index.css" />
+    
   </head>
   <body>
     <h1>Hello World</h1>
@@ -16,8 +17,8 @@
     <h6>Hello World</h6>
 
     <button>Submit</button>
-    <input type="text" placeholder="Input your username">
-    <span>Tag: 0.01</span><br>
+    <input type="text" placeholder="Input your username" />
+    <span>Tag: 0.01</span><br />
     <a href="/hyperlinks.html">MY SPACE</a>
   </body>
 </html>
