--- a/index.html
+++ b/index.html
@@ -3,22 +3,9 @@
   <head>
     <title>Demo1</title>
     <link rel="stylesheet" href="./style_index.css" />
-    
   </head>
   <body>
-    <h1>Hello World</h1>
-    <h2>Hello World</h2>
-    <h2 id="second_h2">Hello World</h2>
-    <h3 class="group1">Hello World 1</h3>
-    <h3 class="group1">Hello World 2</h3>
-    <h3 class="group2">Hello World 3</h3>
-    <h4>Hello World</h4>
-    <h5>Hello World</h5>
-    <h6>Hello World</h6>
-
-    <button>Submit</button>
-    <input type="text" placeholder="Input your username" />
-    <span>Tag: 0.01</span><br />
-    <a href="/hyperlinks.html">MY SPACE</a>
+    <h1>My Profile</h1>
+    <a href="./hyperlinks.html">Demo 1</a>
   </body>
 </html>
